feat: better notifications
